--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>
-  {{title}}
-</h1>
+<div>
+	<list-shops [shops]="shops$ | async | shopsPipe : user" (shopChanged)="shopIsChanged($event)">Shops</list-shops>
+	<list-departements-with-items [departments]="departments$ | async | departmentsPipe: shop"></list-departements-with-items>
+
+	<ngrx-store-log-monitor toggleCommand="ctrl-h" positionCommand="ctrl-m"></ngrx-store-log-monitor>
+</div>
