--- a/src/app/list-departements-with-items/list-departements-with-items.component.html
+++ b/src/app/list-departements-with-items/list-departements-with-items.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let department of departments">
 	{{department.name}}
-  <list-items [items]="items$ | async | itemsPipe : department"></list-items>
+  <list-items [items]="items$ | async | itemsPipe : department | orderBy"></list-items>
 </div>
 	
