--- a/src/app/edit-item/edit-item.component.html
+++ b/src/app/edit-item/edit-item.component.html
@@ -2,10 +2,10 @@
 		<form [formGroup]="itemForm">
 			<input type="hidden" formControlName="key" [ngModel]="item.key">
 			<input type="hidden" formControlName="owner" [ngModel]="item.owner">
-			<input type="hidden" formControlName="order" [ngModel]="item.order">
 			<input type="checkbox" formControlName="buy" [(ngModel)]="item.buy" (blur)="onChange()">
 			<input type="text" formControlName="quantity" [(ngModel)]="item.quantity" (keyup.enter)="onChange()" (blur)="onChange()">
 			<input type="text" formControlName="unit" [(ngModel)]="item.unit" (keyup.enter)="onChange()" (blur)="onChange()"> 
 			<input type="text" formControlName="name" [(ngModel)]="item.name" (keyup.enter)="onChange()" (blur)="onChange()">
+			<input type="text" formControlName="order" [ngModel]="item.order" (keyup.enter)="onChange()" (blur)="onChange()">
 		</form>
 	</div>
