--- a/src/app/list-shops/list-shops.component.html
+++ b/src/app/list-shops/list-shops.component.html
@@ -1,7 +1,7 @@
 
 <select #opt (change)="onChangeShop(opt.value)">
     <option value="foo" disabled selected>Choose a shop</option>
-      <option *ngFor="let shop of shops" value="{{shop.key}}">
+      <option *ngFor="let shop of shops" value="{{shop.$key}}">
       {{shop.name}}
       </option>
 </select>
