--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
 	<list-shops [shops]="shops$ | async " (shopChanged)="shopIsChanged($event)">Shops</list-shops>
-	<list-departements-with-items [departments]="departments$ | async | departmentsPipe: shop"></list-departements-with-items>
+	<list-departements-with-items [departments]="departments$ | async "></list-departements-with-items>
 
-	<ngrx-store-log-monitor toggleCommand="ctrl-h" positionCommand="ctrl-m"></ngrx-store-log-monitor>
+	<!--<ngrx-store-log-monitor toggleCommand="ctrl-h" positionCommand="ctrl-m"></ngrx-store-log-monitor>-->
 </div>
