--- a/src/app/list-items/list-items.component.html
+++ b/src/app/list-items/list-items.component.html
@@ -1,3 +1,13 @@
-<div *ngFor="let item of items ">
-	<edit-item [item]="item"></edit-item>
+<div [formGroup]="itemForm">
+	<div formArrayName="items">
+		<div *ngFor="let item of itemForm.controls.items.controls; let i=index">
+			<div>
+				<span>Item {{i + 1}}</span>
+				<span *ngIf="itemForm.controls.items.controls.length > 1" (click)="removeAddress(i)"></span>
+			</div>
+			<div [formGroupName]="i">
+				<edit-item [group]="itemForm.controls.items.controls[i]"></edit-item>
+			</div>
+		</div>
+	</div>
 </div>
