--- a/src/app/list-departements-with-items/list-departements-with-items.component.html
+++ b/src/app/list-departements-with-items/list-departements-with-items.component.html
@@ -1,5 +1,4 @@
 <div *ngFor="let department of departments">
-	{{department.name}} {{department.order}}
-  <list-items [department]="department" ></list-items>
+  <list-department [department]="department" ></list-department>
 </div>
 	
