--- a/src/app/list-items/list-items.component.html
+++ b/src/app/list-items/list-items.component.html
@@ -3,7 +3,7 @@
 		<div *ngFor="let item of itemForm.controls.items.controls; let i=index">
 			<div>
 				<span>Item {{i + 1}}</span>
-				<span *ngIf="itemForm.controls.items.controls.length > 1" (click)="removeAddress(i)"></span>
+				<!--span *ngIf="itemForm.controls.items.controls.length > 1"></span-->
 			</div>
 			<div [formGroupName]="i">
 				<edit-item [group]="itemForm.controls.items.controls[i]"></edit-item>
@@ -11,3 +11,4 @@
 		</div>
 	</div>
 </div>
+<!--pre>form value: <br>{{itemForm.value | json}}</pre-->
