better list items

--- a/src/app/list-department/list-department.component.html
+++ b/src/app/list-department/list-department.component.html
@@ -1,4 +1,5 @@
 <p>
   List department {{department.name}} {{department.order}}
 </p>
-<list-items [items]="items$ | async | orderBy "></list-items>
+<list-items>list items html</list-items>
+<!--list-items [items]="items$ | async | orderBy "></list-items-->
