--- a/src/app/list-department/list-department.component.html
+++ b/src/app/list-department/list-department.component.html
@@ -1,4 +1,7 @@
-<p>
-  List department {{department.name}} {{department.order}}
-</p>
+<div [formGroup]="departmentForm">
+    <input type="hidden" formControlName="$key" >
+    <input type="text" formControlName="name" [style.width.em]="25" (change)="onChange()">
+    <input type="hidden" formControlName="owner" (change)="onChange()">
+    <input type="text" formControlName="order" [style.width.em]="4" (change)="onChange()">
+</div>
 <list-items [department]="department"></list-items>
