--- a/src/app/list-items/list-items.component.html
+++ b/src/app/list-items/list-items.component.html
@@ -2,7 +2,7 @@
 	<div formArrayName="items">
 		<div *ngFor="let item of getItems(); let i=index">
 			<div>
-				<span>Item {{i}}</span>
+				<!--span>Item {{i}}</span>-->
 				<!--span *ngIf="itemForm.controls.items.controls.length > 1"></span-->
 			</div>
 			<div [formGroupName]="i">
