--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,1 +1,2 @@
-<input type="search" [formControl]="searchControl" placeholder="search items">
+<input type="search" [formControl]="searchControl" [style.width.em]="15.5" placeholder="search items and departments">
+
