Select-option is black????

--- a/src/app/list-shops/list-shops.component.html
+++ b/src/app/list-shops/list-shops.component.html
@@ -5,5 +5,5 @@
       {{shop.name}}
       </option>
 </select>
-  <span><search>Loadin search...</search></span>
+  <span><search>Loading search...</search></span>
 </div>
