--- a/src/app/list-department/list-department.component.html
+++ b/src/app/list-department/list-department.component.html
@@ -1,5 +1,11 @@
+
+<!--<pizza-dialog></pizza-dialog>-->
 <div [hidden]="hidden" [formGroup]="departmentForm">
-    <input type="hidden" formControlName="$key" >
+    <button md-mini-fab (click)="openAddItemDialog()">
+        <md-icon class="md-24">add</md-icon>
+    </button>
+
+    <input type="hidden" formControlName="$key">
     <input type="text" formControlName="name" [style.width.em]="25" (change)="onChange()">
     <input type="hidden" formControlName="owner" (change)="onChange()">
     <input type="text" formControlName="order" [style.width.em]="4" (change)="onChange()">
