start adding routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div>
-	<list-shops [shops]="shops$ | async " (shopChanged)="onShopChanged($event)">Shops</list-shops>
+	<span>
+		<list-shops [shops]="shops$ | async " (shopChanged)="onShopChanged($event)">Shops</list-shops>
+		<search>Loading search...</search>
+	</span>
 	<list-departements-with-items [departments]="departments"></list-departements-with-items>
 </div>
