Test of routerlinks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div>
 	{{ title }} 
 </div>
+<nav>
+    <a routerLink="/home" routerLinkActive="active">Home</a>
+    <a routerLink="/**" routerLinkActive="active">PageNotFound</a>
+  </nav>
 <router-outlet></router-outlet>
