add item now works

--- a/src/app/list-department/list-department.component.html
+++ b/src/app/list-department/list-department.component.html
@@ -1,12 +1,11 @@
 
 <div [hidden]="hidden" [formGroup]="departmentForm">
-    <button md-mini-fab (click)="openAddItemDialog()">
+    <button md-mini-fab (click)="addNewItem()">
         <md-icon class="md-24">add</md-icon>
     </button>
-
     <input type="hidden" formControlName="$key">
     <input type="text" formControlName="name" [style.width.em]="25" (change)="onChange()">
     <input type="hidden" formControlName="owner" (change)="onChange()">
     <input type="text" formControlName="order" [style.width.em]="4" (change)="onChange()">
 </div>
-<list-items [department]="department"></list-items>
+<list-items [department]="department" (firstItemEvent)="this.addFirstItem($event)" ></list-items>
