--- a/src/app/edit-item/edit-item.component.html
+++ b/src/app/edit-item/edit-item.component.html
@@ -5,7 +5,7 @@
 		<input type="checkbox" formControlName="buy" (change)="onChange()">
 		<input type="text" formControlName="quantity" [style.width.em]="3" (change)="onChange()" data-lpignore="true">
 		<input type="text" formControlName="unit" [style.width.em]="6" (change)="onChange()" data-lpignore="true">
-		<input type="text" formControlName="name" [style.width.em]="25" (change)="onChange()" data-lpignore="true">
+		<input type="text" id="name{{this.key}}" formControlName="name" [style.width.em]="25" (change)="onChange()" data-lpignore="true">
 		<input type="text" formControlName="order" [style.width.em]="5" (change)="onChange()" data-lpignore="true">
 		<span id="dz{{this.key}}" class="dzleave" >Drag item and drop here to delete it</span>
 	</form>
