Changed dropzone to div

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,4 +4,5 @@
 		<search>Loading search...</search>
 	</span>
 	<list-departements-with-items [departments]="departments"></list-departements-with-items>
+	<item-drop-zone></item-drop-zone>
 </div>
