--- a/src/app/item-drop-zone/item-drop-zone.component.css
+++ b/src/app/item-drop-zone/item-drop-zone.component.css
@@ -16,3 +16,15 @@
     color: "black";
     background-color: white;
 }
+
+#itemdropzone {
+    height: 100%;
+    flex-grow: 1;
+}
+
+
+.dragtext {
+    margin-bottom: 35%;
+    margin-top: 35%;
+    text-align: center;
+}
