--- a/src/app/item-drop-zone/item-drop-zone.component.html
+++ b/src/app/item-drop-zone/item-drop-zone.component.html
@@ -1,3 +1,3 @@
 <div id="itemdropzone" dropzone="move string:text/itemkey" class="dzleave">
-    Drag item and drop here to delete item
+    <div class="dragtext">Drag item and drop here to delete it</div>
 </div>
