--- a/src/app/list-department/list-department.component.html
+++ b/src/app/list-department/list-department.component.html
@@ -1,5 +1,5 @@
 
-<div [hidden]="hidden" [formGroup]="departmentForm">
+<div [hidden]="hidden" id="{{id}}-f" [formGroup]="departmentForm">
     <button md-mini-fab (click)="addNewItem()">
         <md-icon class="md-24">add</md-icon>
     </button>
@@ -8,4 +8,4 @@
     <input type="hidden" formControlName="owner" (change)="onChange()">
     <input type="text" formControlName="order" [style.width.em]="4" (change)="onChange()">
 </div>
-<list-items [department]="department" (firstItemEvent)="this.addFirstItem($event)" ></list-items>
+<list-items [id]="id" [department]="department" (firstItemEvent)="this.addFirstItem($event)" ></list-items>
