started drop on departmen to add first item

--- a/src/app/items/list-department/list-department.component.css
+++ b/src/app/items/list-department/list-department.component.css
@@ -6,4 +6,21 @@ button {
 .mat-mini-fab .mat-icon {
    padding: 0;
 }
+
+.dzenter {
+    background-color: blue;
+}
+
+.dzenter input {
+    color: yellow;
+    background-color: blue;
     
+}
+.dzleave {
+    background-color: white;
+}
+
+.dzleave input{
+    background-color: white;
+    color: black;
+} 
