started with shop and departments

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
 	{{ title }} 
 </div>
 <nav>
-    <a routerLink="/home" routerLinkActive="active">Home</a>
+    <a routerLink="/home" routerLinkActive="active">Items</a>
+   <a routerLink="/departments" routerLinkActive="active">Departments</a>
     <a routerLink="/**" routerLinkActive="active">PageNotFound</a>
   </nav>
 <router-outlet></router-outlet>
