--- a/src/app/departments/list-shops-with-departments/list-shops-with-departments.component.html
+++ b/src/app/departments/list-shops-with-departments/list-shops-with-departments.component.html
@@ -1,3 +1,3 @@
-<p>
-  list-shops-with-departments works!
-</p>
+<div *ngFor="let shop of shops; let i = index">
+  <list-shop [id]="'s'+i" id="{{id}}" [shop]="shop" ></list-shop>
+</div>
