--- a/src/app/departments/list-shop/list-shop.component.html
+++ b/src/app/departments/list-shop/list-shop.component.html
@@ -9,5 +9,5 @@
     <input type="text" formControlName="order" [style.width.em]="4" (change)="onChange()">
 </div>
 <!--
-<list-items [id]="id" [department]="department" (firstItemEvent)="this.addFirstItem($event)" ></list-items>
+<list-departments [id]="id" [department]="department" (firstItemEvent)="this.addFirstItem($event)" ></list-departments>
 -->
