--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-	{{ title }} 
+	{{ title }} Name: {{loggedIn().name}} Owner {{loggedIn().shopOwner}}
 </div>
 <nav>
     <a routerLink="/home" routerLinkActive="active">Items</a>
