--- a/src/app/departments/departments-home/departments-home.component.html
+++ b/src/app/departments/departments-home/departments-home.component.html
@@ -2,11 +2,13 @@
 	<!--list-shops [shops]=" shops$ | async " (shopChanged)="onShopChanged($event) ">Shops</list-shops-->
 	<search>Loading search...</search>
 </div>
-<div *ngFor="let shop of (shops$ | async); let i = index">
+<div *ngFor="let shop of shops; let i = index">
 	<list-shop [id]="'s'+i" id="{{id}}" [shop]="shop">
+		<list-departments [shop]="shop"></list-departments> 
+		<!--
 		<div *ngFor="let department of (departments$ | async); let i = index">
 			FOO {{department.name}}
-		</div>
+		</div>-->
 	</list-shop>
 </div>
 <!-- GB 
