--- a/src/app/departments/show-shops-with-departments/show-shops-with-departments.component.html
+++ b/src/app/departments/show-shops-with-departments/show-shops-with-departments.component.html
@@ -1,6 +1,6 @@
 <div *ngFor="let shop of shops; let i = index">
   {{shop.name}}
-  <list-shop [id]="'d'+i" id="{{id}}" [shop]="shop" ></list-shop>
+  <show-shop [id]="'d'+i" id="{{id}}" [shop]="shop" ></show-shop>
   <!--
    <list-departments [id]="'d'+i" id="{{id}}" [shop]="shop" ></list-departments>
   -->
