--- a/src/app/departments/show-shops-with-departments/show-shops-with-departments.component.html
+++ b/src/app/departments/show-shops-with-departments/show-shops-with-departments.component.html
@@ -1,7 +1,8 @@
+  <show-shops [shops]="shops" ></show-shops>
+  <!--
+  <show-shops [id]="'d'+i" id="{{id}}" [shops]="shops" ></show-shops>
 <div *ngFor="let shop of shops; let i = index">
   {{shop.name}}
-  <show-shop [id]="'d'+i" id="{{id}}" [shop]="shop" ></show-shop>
-  <!--
    <list-departments [id]="'d'+i" id="{{id}}" [shop]="shop" ></list-departments>
-  -->
 </div>
+  -->
