--- a/src/app/departments/show-shop/show-shop.component.html
+++ b/src/app/departments/show-shop/show-shop.component.html
@@ -7,7 +7,8 @@
     <input type="hidden" formControlName="owner" (change)="onChange()">
     <input type="text" formControlName="order" [style.width.em]="4" (change)="onChange()">
 </div>
-<!--GB
-<list-departments [id]="id" [shop]="shop"></list-departments>
-<list-departments [id]="id" [shop]="shop" (firstDepartmentEvent)="this.addFirstDepartment($event)" ></list-departments>
+    <show-departments [id]="id" [shop]="shop"></show-departments>
+    <!--
+<div *ngFor="let shop of shops; let i = index">
+</div>
 -->
