add first department added is last

--- a/src/app/departments/show-department/show-department.component.html
+++ b/src/app/departments/show-department/show-department.component.html
@@ -1,1 +1,11 @@
-{{department.name}}
+<div [hidden]="hidden" id="{{id}}-f" [formGroup]="departmentForm" class="dzleave">
+    <!--GB
+    <button md-mini-fab (click)="addNewItem()"> 
+        <md-icon class="md-24">add</md-icon>
+    </button>
+    -->
+    <input type="hidden" formControlName="$key">
+    <input type="text" formControlName="name" [style.width.em]="25" (change)="onChange()">
+    <input type="hidden" formControlName="owner" (change)="onChange()">
+    <input type="text" formControlName="order" [style.width.em]="4" (change)="onChange()">
+</div>
