--- a/src/app/departments/show-shops/show-shops.component.html
+++ b/src/app/departments/show-shops/show-shops.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let shop of shops; let i = index">
-   <show-shop [id]="'d'+i" id="{{id}}" [shop]="shop" [shops]="shops"></show-shop>
+   <show-shop [id]="'d'+i" id="{{id}}" [shop]="shop" [shops]="shops" [departments]="departments"></show-shop>
 </div>
