--- a/src/app/items/list-department/list-department.component.html
+++ b/src/app/items/list-department/list-department.component.html
@@ -1,6 +1,6 @@
 
 <div [hidden]="hidden" id="{{id}}-f" [formGroup]="departmentForm" class="dzleave">
-    <button md-mini-fab (click)="addNewItem()">
+    <button md-mini-fab (click)="newItem()">
         <md-icon class="md-24">add</md-icon>
     </button>
     <input type="hidden" formControlName="$key">
@@ -8,4 +8,4 @@
     <input type="hidden" formControlName="owner" (change)="onChange()">
     <input type="text" formControlName="order" [style.width.em]="4" (change)="onChange()">
 </div>
-<list-items [id]="id" [department]="department" (firstItemEvent)="addFirstItem($event)" ></list-items>
+<list-items [id]="id" [department]="department"></list-items>
