changed to better id's

--- a/src/app/departments/show-department/show-department.component.html
+++ b/src/app/departments/show-department/show-department.component.html
@@ -1,4 +1,4 @@
-<div [hidden]="hidden" id="{{id}}-f" [formGroup]="departmentForm" class="dzleave">
+<div [hidden]="hidden" id="{{id}}" [formGroup]="departmentForm" class="dzleave">
     <!--GB
     <button md-mini-fab (click)="addNewItem()"> 
         <md-icon class="md-24">add</md-icon>
