--- a/src/app/departments/show-shop/show-shop.component.html
+++ b/src/app/departments/show-shop/show-shop.component.html
@@ -1,4 +1,4 @@
-<div [hidden]="hidden" id="{{id}}-f" [formGroup]="shopForm" class="dzleave">
+<div [hidden]="hidden" id="{{id}}" [formGroup]="shopForm" class="dzleave">
     <button md-mini-fab (click)="newDepartment()">
         <md-icon class="md-24">add</md-icon>
     </button>
