--- a/src/app/items/list-department/list-department.component.html
+++ b/src/app/items/list-department/list-department.component.html
@@ -1,5 +1,5 @@
 
-<div [hidden]="hidden" id="{{id}}-f" [formGroup]="departmentForm" class="dzleave">
+<div [hidden]="hidden" id="{{id}}" [formGroup]="departmentForm" class="dzleave">
     <button md-mini-fab (click)="newItem()">
         <md-icon class="md-24">add</md-icon>
     </button>
