--- a/src/app/departments/department-drop-zone/department-drop-zone.component.html
+++ b/src/app/departments/department-drop-zone/department-drop-zone.component.html
@@ -1,3 +1,3 @@
-<p>
-  department-drop-zone works!
-</p>
+<div id="departmentdropzone" class="dzleave">
+    <div class="dragtext">Drag department and drop here to delete it</div>
+</div>
